WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279234
[macOS] Cannot click to move cursor focus to mail body after using smart reply and clicking in subject field
https://bugs.webkit.org/show_bug.cgi?id=279234
Summary
[macOS] Cannot click to move cursor focus to mail body after using smart repl...
Aditya Keerthi
Reported
2024-09-05 16:07:36 PDT
rdar://135281189
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-05 16:08:48 PDT
<
rdar://problem/135377040
>
Aditya Keerthi
Comment 2
2024-09-05 16:19:55 PDT
rdar://135281189
Aditya Keerthi
Comment 3
2024-09-05 17:31:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33222
EWS
Comment 4
2024-09-06 10:43:11 PDT
Committed
283274@main
(3918b513f4cd): <
https://commits.webkit.org/283274@main
> Reviewed commits have been landed. Closing PR #33222 and removing active labels.
EWS
Comment 5
2024-09-09 12:11:29 PDT
Committed
280938.317@safari-7619-branch
(fd43eec4b13e): <
https://commits.webkit.org/280938.317@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1705 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug