[macOS] Cannot click to move cursor focus to mail body after using smart reply and clicking in subject field https://bugs.webkit.org/show_bug.cgi?id=279234 rdar://135281189

Reviewed by Wenson Hsieh, Richard Robinson, and Abrar Rahman Protyasha.

A `_WTTextEffectView` is inserted into the view hierarchy when performing
Writing Tools animations. However, it is currently not being removed once the
animations are complete. This is problematic, as the `_WTTextEffectView`
prevents the `WKWebView` from becoming first responder, when clicking over the
web view.

Fix by removing the effect view once animations are complete.

Additionally, resolve memory leaks and actually remove text effects from a map
when they are finished. That is the signal used to remove the effect view.

* Source/WebKit/UIProcess/mac/PageClientImplMac.mm:
(WebKit::PageClientImpl::didCommitLoadForMainFrame):

Remove the effect view when navigating to a different page.

* Source/WebKit/UIProcess/mac/WKTextAnimationManager.h:
* Source/WebKit/UIProcess/mac/WKTextAnimationManager.mm:
(-[WKTextAnimationManager addTextAnimationForAnimationID:withData:]):

Add a completion handler for the source animation, in order to keep the
map of effects up-to-date and remove a memory leak.

Add the effect view to the view hierarchy when needed.

(-[WKTextAnimationManager removeTextAnimationForAnimationID:]):

Remove the effect view if there are no active effects.

(-[WKTextAnimationManager hideTextAnimationView]):
* Source/WebKit/UIProcess/mac/WebViewImpl.h:
* Source/WebKit/UIProcess/mac/WebViewImpl.mm:
(WebKit::WebViewImpl::hideTextAnimationView):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WritingTools.mm:
(TEST(WritingTools, FocusWebViewAfterAnimation)):

Canonical link: https://commits.webkit.org/283274@main